work around misc slider layout issues using css

--- a/trunk/team/cmalley/html5/jquerymobile-test/test.css
+++ b/trunk/team/cmalley/html5/jquerymobile-test/test.css
@@ -22,7 +22,19 @@
     display: none;
 }
 
+/* Workaround the width */
+div.ui-slider {
+    width: 80%;
+}
+
 /* Workaround to fix slider handle margins, messed up by #optionPanel .ui-btn */
 #strengthSliderDiv .ui-slider-handle {
     margin: -15px 0px 0px -15px;
+}
+
+#strengthSliderLabel {
+    margin: 15px 0px 10px 0px;
+    font-family: Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
